--- a/app/src/main/res/layout/activity_set_user.xml
+++ b/app/src/main/res/layout/activity_set_user.xml
@@ -201,21 +201,11 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="130dp"
             android:src="@drawable/selector_for_currency"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/delete_user_btn"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="780dp"
-            android:background="@drawable/template_for_btn_delete"
-            android:text="Удалить аккаунт"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:onClick="onClick"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:textSize="30dp" />
-
-        <androidx.appcompat.widget.AppCompatButton
+            android:padding="20dp">
+            <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/save_settings"
             android:onClick="onClick"
             android:layout_width="294dp"
@@ -228,18 +218,27 @@
             android:textColor="@color/black"
             android:text="Сохранить"
             android:foreground="?android:attr/selectableItemBackground"
-            android:background="@drawable/template_for_btn_save_settings" />
+            android:background="@drawable/template_for_btn_save_settings"
+                android:layout_below="@+id/delete_user_btn"/>
 
-        <ImageButton
-            android:id="@+id/btn_return_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/home_fill"
-            android:onClick="onClick"
-            android:layout_marginTop="890dp"
-            android:background="@null"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_alignParentBottom="true"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/delete_user_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="780dp"
+                android:background="@drawable/template_for_btn_delete"
+                android:text="Удалить аккаунт"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:onClick="onClick"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:textSize="30dp" />
+        </RelativeLayout>
+
+
+
+
     </RelativeLayout>
 </ScrollView>
 
