some bags removed !

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,5 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="30dp" />
+    <TextView
+        android:id="@+id/lblEmptyInHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:paddingBottom="20dp"
+        android:textColor="#848484"
+        android:text="Пока пусто!"
+        android:textSize="40dp"
+        android:visibility="invisible"
+        />
 
-</LinearLayout>
+</RelativeLayout>
