--- a/app/src/main/res/layout/good_template.xml
+++ b/app/src/main/res/layout/good_template.xml
@@ -32,7 +32,8 @@
         android:paddingTop="5dp"
         android:text="Цель"
         android:textColor="@color/black"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        />
 </RelativeLayout>
 
 
