--- a/app/src/main/res/layout/activity_money_pig.xml
+++ b/app/src/main/res/layout/activity_money_pig.xml
@@ -1,9 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoneyPigActivity">
+    tools:context=".MoneyPigActivity"
+    android:background="@color/black">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_alignParentTop="true"
+                android:layout_above="@id/containerForImage">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="2dp"
+                    android:background="@color/white"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_toLeftOf="@id/lblNameOfGoal"
+                    android:layout_toRightOf="@id/lblNameOfGoal"
+                    android:layout_above="@id/lblNameOfGoal"/>
+                <TextView
+                    android:id="@+id/lblNameOfGoal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textSize="36dp"
+                    android:textColor="#C4C4C4"
+                    android:textStyle="bold"
+                    android:text="Холодильник"
+
+                    />
+                <View
+                    android:layout_below="@+id/lblNameOfGoal"
+                    android:layout_width="320dp"
+                    android:layout_height="2dp"
+                    android:background="@color/white"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_toLeftOf="@id/lblNameOfGoal"
+                    android:layout_toRightOf="@id/lblNameOfGoal"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/containerForImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_centerInParent="true">
+                <ImageButton
+                    android:layout_width="208dp"
+                    android:layout_height="198dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/money_pig_def"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_below="@id/containerForImage"
+                >
+
+                <ProgressBar
+                    android:minHeight="12dip"
+                    android:maxHeight="12dip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="false"
+                    android:progress="50"
+                    android:progressDrawable="@drawable/horizontal_progress_bar"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+                <ImageButton
+                    android:id="@+id/addGoalBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentBottom="true"
+                    android:onClick="addGoalClicked"
+                    android:foreground="?android:attr/selectableItemBackground"
+
+                    android:src="@drawable/btn_add_good_image"/>
+
+                <ImageButton
+                    android:id="@+id/listOfCoalsBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/bookmark"/>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
