--- a/app/src/main/res/layout/activity_money_pig.xml
+++ b/app/src/main/res/layout/activity_money_pig.xml
@@ -39,7 +39,7 @@
                     android:textSize="36dp"
                     android:textColor="#C4C4C4"
                     android:textStyle="bold"
-                    android:text="Холодильник"
+                    android:text="Название цели"
 
                     />
                 <View
@@ -60,13 +60,27 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:layout_centerInParent="true">
-                <ImageButton
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageOfCurrentGoal"
                     android:layout_width="208dp"
                     android:layout_height="198dp"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/money_pig_def"
+                    android:src="@drawable/money_pig_def"
+                    app:civ_border_color="@color/white"
+
+                    app:civ_border_width="2dp"
+
                     />
+
+                <ImageButton
+                    android:id="@+id/changeImageOfCurrentGoalBtn"
+                    android:layout_width="208dp"
+                    android:layout_height="198dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/money_pig_def"
+                    android:visibility="invisible"
+                    />
+
 
             </RelativeLayout>
 
@@ -78,15 +92,37 @@
                 >
 
                 <ProgressBar
+                    android:id="@+id/progressOfGoal"
                     android:minHeight="12dip"
                     android:maxHeight="12dip"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:indeterminate="false"
-                    android:progress="50"
+                    android:progress="0"
                     android:progressDrawable="@drawable/horizontal_progress_bar"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
 
+                <TextView
+                    android:layout_below="@id/progressOfGoal"
+                    android:id="@+id/lblProgressOfGoal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="0/1000"
+                    android:textSize="18dp"
+                    android:textColor="@color/white"/>
+                <TextView
+                    android:layout_below="@id/progressOfGoal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toEndOf="@id/lblProgressOfGoal"
+                    android:id="@+id/lblCurrencyOfGoalProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="p"
+                    android:textSize="18dp"
+                    android:textColor="@color/white"
+                    android:layout_toRightOf="@id/lblProgressOfGoal" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -95,6 +131,7 @@
                 android:padding="20dp">
 
             </RelativeLayout>
+
 
 
             <RelativeLayout
