--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red">#FF0000</color>
     <color name="forTargetLayout">#C0C0C0</color>
     <color name="crimson">#8B1414</color>
+    <color name="gray">#B0B0B0</color>
 </resources>
