--- a/app/src/main/res/layout/activity_set_passwd.xml
+++ b/app/src/main/res/layout/activity_set_passwd.xml
@@ -27,7 +27,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-
+                        android:gravity="center"
                         android:text="@string/enter_old_passwd"
                         android:textColor="#848484"
                         android:textSize="30dp" />
@@ -60,13 +60,15 @@
                     android:id="@+id/bigContainerForNewPasswd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true">
+                    android:layout_centerInParent="true"
+                    >
 
                     <RelativeLayout
                         android:id="@+id/containerForLblNewPasswd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="20dp">
+                        android:padding="20dp"
+                        >
 
                         <TextView
                             android:id="@+id/newPasswd_tv"
@@ -115,6 +117,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:text="Повторите новый пароль"
+                            android:gravity="center"
                             android:textColor="#848484"
                             android:textSize="30dp" />
                     </RelativeLayout>
