--- a/app/src/main/res/layout/activity_set_passwd.xml
+++ b/app/src/main/res/layout/activity_set_passwd.xml
@@ -20,8 +20,8 @@
                     android:id="@+id/containerForLblOldPasswd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:layout_alignParentTop="true">
+                    android:layout_alignParentTop="true"
+                    android:padding="10dp">
                     <TextView
                         android:id="@+id/enter_old_password"
                         android:layout_width="wrap_content"
@@ -61,13 +61,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+
                     >
 
                     <RelativeLayout
                         android:id="@+id/containerForLblNewPasswd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:layout_marginTop="30dp"
                         >
 
                         <TextView
@@ -109,8 +110,8 @@
                         android:id="@+id/containerForLblNewPasswdRepeat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
-                        android:layout_below="@id/containerForTxtNewPasswd">
+                        android:layout_below="@id/containerForTxtNewPasswd"
+                        android:padding="20dp">
 
                         <TextView
                             android:layout_width="wrap_content"
