--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -13,10 +13,12 @@
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
                 <RelativeLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp">
@@ -24,6 +26,17 @@
                         android:id="@+id/pieChartOfSpendings"
                         android:layout_width="300dp"
                         android:layout_height="300dp"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp">
+                    <com.github.mikephil.charting.charts.HorizontalBarChart
+                        android:id="@+id/barChartOfSpendings"
+                        android:layout_width="350dp"
+                        android:layout_height="350dp"
                         android:layout_centerInParent="true"/>
                 </RelativeLayout>
 
