--- a/app/src/main/res/layout/activity_set_user.xml
+++ b/app/src/main/res/layout/activity_set_user.xml
@@ -204,30 +204,37 @@
                 android:background="@drawable/template_for_tv_in_set_user_name"
                 android:id="@+id/listViewWithSalary"
                 android:layout_centerInParent="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/etext_salary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="30dp"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:maxLength="8"
+                        android:text="23,4,432222"
+                        android:layout_marginLeft="30dp"
+                        android:ellipsize="start"
+                        android:inputType="numberDecimal|number"/>
 
-                <EditText
-                    android:id="@+id/etext_salary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:textColor="@color/black"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:maxLength="8"
-                    android:text="23,4,432222"
-                    android:layout_marginLeft="50dp"
-                    android:ellipsize="start"
-                    android:inputType="numberDecimal|number"/>
+                    <TextView
+                        android:id="@+id/symbolOfCurrency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="30dp"
+                        android:singleLine="true"
+                        android:text="p"
 
-                <TextView
-                    android:id="@+id/symbolOfCurrency"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:singleLine="true"
-                    android:layout_marginLeft="100dp"
-                    android:textColor="@color/black"/>
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:textColor="@color/black"
+                        />
+                </RelativeLayout>
+
 
 
             </LinearLayout>
