--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -22,6 +22,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp">
+
+
+
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/pieChartOfSpendings"
                         android:layout_width="300dp"
@@ -29,16 +32,90 @@
                         android:layout_centerInParent="true"/>
                 </RelativeLayout>
 
+
+
+
                 <RelativeLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:background="#808080"
+
+                        android:layout_toLeftOf="@id/progressOfSpends"
+                        android:layout_toRightOf="@id/progressOfSpends" />
+
+                    <TextView
+                        android:layout_marginTop="20dp"
+                        android:id="@+id/lblPercentageOfSpends"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:textColor="#CFCFCF"
+                        android:text="74% из вашей вашей зарплаты потрачено "
+                        />
+
+
+                    <ProgressBar
+                        android:id="@+id/progressOfSpends"
+                        android:layout_below="@id/lblPercentageOfSpends"
+                        android:layout_marginTop="10dp"
+                        android:minHeight="12dip"
+                        android:maxHeight="12dip"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:indeterminate="false"
+                        android:progress="0"
+                        android:progressDrawable="@drawable/horizontal_bar_for_spends"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
+
+                    <TextView
+                        android:id="@+id/lblSpends"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:textColor="@color/white"
+                        android:text="1480 из 20000"
+                        android:layout_marginTop="15dp"
+                        android:layout_below="@id/progressOfSpends"
+                        />
+                    <TextView
+                        android:id="@+id/lblCurrencyOfSpends"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:textColor="@color/white"
+                        android:text="p"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/lblSpends"
+                        android:layout_below="@id/progressOfSpends"
+                        />
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:background="#808080"
+                        android:layout_below="@id/lblSpends"
+                        android:layout_marginTop="15dp"
+                        android:layout_toLeftOf="@id/progressOfSpends"
+                        android:layout_toRightOf="@id/progressOfSpends" />
+
                     <com.github.mikephil.charting.charts.HorizontalBarChart
                         android:id="@+id/barChartOfSpendings"
                         android:layout_width="350dp"
-                        android:layout_height="350dp"
-                        android:layout_centerInParent="true"/>
+                        android:layout_height="550dp"
+                        android:layout_centerInParent="true"
+
+                        android:layout_marginTop="70dp"
+
+                        />
                 </RelativeLayout>
+
+
 
 
 
