--- a/app/src/main/res/layout/activity_sign_up_no_acc3.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc3.xml
@@ -58,7 +58,7 @@
                 android:layout_height="58dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/body_for_edit_text"
-
+                android:maxLength="9"
                 android:textSize="30dp"
                 android:gravity="center"
                 android:inputType="numberDecimal"
