--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -18,7 +18,7 @@
 
 
                 <RelativeLayout
-
+                    android:id="@+id/containerForLblSpends"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp">
@@ -105,20 +105,66 @@
                         android:layout_toRightOf="@id/progressOfSpends" />
 
 
+                    <!-- Customize your theme here.
                     <com.github.mikephil.charting.charts.HorizontalBarChart
                         android:id="@+id/barChartOfSpendings"
                         android:layout_width="350dp"
-                        android:layout_height="550dp"
+                        android:layout_height="350dp"
                         android:layout_centerInParent="true"
-
                         android:layout_marginTop="70dp"
 
-                        />
+                        />-->
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp">
+                    <LinearLayout
+                        android:id="@+id/containerForLblTable"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <RelativeLayout
 
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentLeft="true"
+                                android:textColor="@color/white"
+                                android:textSize="25dp"
+                                android:text="Категория"
+                                android:textStyle="bold"
+                                />
 
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:textColor="@color/white"
+                                android:textSize="25dp"
+                                android:text="Трата"
+                                android:textStyle="bold"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:textColor="@color/white"
+                                android:textSize="25dp"
+                                android:text="Трата(%)"
+                                android:textStyle="bold"/>
 
+                        </RelativeLayout>
+                    </LinearLayout>
+                    <ListView
+                        android:id="@+id/listViewOfLegend"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_below="@id/containerForLblTable" />
+
+                </RelativeLayout>
 
             </LinearLayout>
         </ScrollView>
