--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -173,7 +173,8 @@
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
-
+       app:rippleColor="@android:color/black"
+       app:borderWidth="0dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/clock"
