--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -13,7 +13,7 @@
             android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -163,13 +163,17 @@
                     <ListView
 
                         android:id="@+id/listViewOfLegend"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_below="@id/containerForLblTable" />
+                        android:layout_below="@id/containerForLblTable"
 
+                        />
                 </RelativeLayout>
-            </LinearLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
         </ScrollView>
+
+
+
 
 
 
