--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -10,6 +10,7 @@
 
     <!-- Customize your theme here. -->
         <ScrollView
+            android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
@@ -160,13 +161,13 @@
                         </RelativeLayout>
                     </LinearLayout>
                     <ListView
+
                         android:id="@+id/listViewOfLegend"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_below="@id/containerForLblTable" />
 
                 </RelativeLayout>
-
             </LinearLayout>
         </ScrollView>
 
