--- a/app/src/main/res/layout/good_template.xml
+++ b/app/src/main/res/layout/good_template.xml
@@ -7,8 +7,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_centerInParent="true">
+        <RelativeLayout
+            android:id="@+id/containerForLblTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:visibility="gone"
+            >
+            <TextView
+                android:id="@+id/lblTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.48"
+                android:background="#333333"
+                android:textSize="34dp"
+                android:text="2021-05-13"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+
+                />
+        </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
