--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -177,8 +177,14 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-
-
+    <ProgressBar
+        android:id="@+id/progressBarInCharts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/purple_500"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        />
 
 
 
