i made the legend and design of the legend

--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -166,7 +166,7 @@
 
                     </LinearLayout>
                     <ListView
-
+                        android:dividerHeight="10dp"
                         android:id="@+id/listViewOfLegend"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
