--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
                 >
 
                 <ListView
-
+                    android:dividerHeight="10dp"
+                    android:layout_marginTop="50dp"
                     android:id="@+id/listViewOfLegendInMain"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
