--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -47,7 +47,8 @@
                         android:layout_centerHorizontal="true"
                         android:paddingLeft="20dp"
                         android:background="@drawable/body_for_edit_text"
-                        android:maxLength="10" />
+                        android:maxLength="10"
+                        android:inputType="text"/>
 
 
                 </RelativeLayout>
