--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -64,6 +64,7 @@
        android:layout_width="323dp"
        android:maxLength="10"
        android:layout_height="37dp"
+       android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:background="@drawable/body_for_edit_text"
@@ -81,6 +82,7 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costAddGood"
+       android:singleLine="true"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
