--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="crimson">#8B1414</color>
     <color name="gray">#B0B0B0</color>
 
+    <color name="green">#3BBE25</color>
+
 
 
 
