--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -5,7 +5,7 @@
     <item android:drawable="@android:color/black"/>
 
     <!-- Лого приложения - 144dp версия иконки приложения -->
-    <item android:gravity="center" android:drawable="@drawable/logoforsplash"
+    <item android:gravity="center" android:drawable="@drawable/logoofpennyjoy"
        />
     
 
