--- a/app/src/main/res/layout/aler_dialog_in_main_tamplate.xml
+++ b/app/src/main/res/layout/aler_dialog_in_main_tamplate.xml
@@ -17,8 +17,11 @@
             android:layout_height="333dp"
             app:cardCornerRadius="20dp"
             android:layout_centerInParent="true">
-
+            <!-- в паддинге не уверен -->
             <ScrollView
+
+                android:paddingTop="30dp"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
